add and edit Services and controller Existin pojo

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,25 +27,93 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.antlr-2.7.6.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\antlr-2.7.6.jar
+file.reference.asm-3.1.jar=E:\\iti study\\web service\\jars for server\\asm-3.1.jar
+file.reference.commons-collections-3.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\commons-collections-3.1.jar
+file.reference.commons-logging-1.1.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\commons-logging-1.1.1.jar
+file.reference.dom4j-1.6.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\dom4j-1.6.1.jar
+file.reference.gson-2.2.4-javadoc.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4-javadoc.jar
+file.reference.gson-2.2.4-sources.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4-sources.jar
+file.reference.gson-2.2.4.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4.jar
+file.reference.hibernate3.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\hibernate3.jar
+file.reference.jackson-core-asl-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-core-asl-1.9.2.jar
+file.reference.jackson-jaxrs-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-jaxrs-1.9.2.jar
+file.reference.jackson-mapper-asl-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-mapper-asl-1.9.2.jar
+file.reference.jackson-xc-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-xc-1.9.2.jar
+file.reference.javassist-3.9.0.GA.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\javassist-3.9.0.GA.jar
+file.reference.jersey-apache-client-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-apache-client-1.18.jar
+file.reference.jersey-atom-abdera-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-atom-abdera-1.18.jar
+file.reference.jersey-client-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-client-1.18.jar
+file.reference.jersey-core-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-core-1.18.jar
+file.reference.jersey-guice-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-guice-1.18.jar
+file.reference.jersey-json-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-json-1.18.jar
+file.reference.jersey-multipart-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-multipart-1.18.jar
+file.reference.jersey-server-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-server-1.18.jar
+file.reference.jersey-servlet-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-servlet-1.18.jar
+file.reference.jersey-simple-server-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-simple-server-1.18.jar
+file.reference.jersey-spring-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-spring-1.18.jar
+file.reference.jettison-1.1.jar=E:\\iti study\\web service\\jars for server\\jettison-1.1.jar
 file.reference.json-simple-1.1.1.jar=E:\\a7eeeh\\json-simple-1.1.1.jar
+file.reference.jsr311-api-1.1.1.jar=E:\\iti study\\web service\\jars for server\\jsr311-api-1.1.1.jar
+file.reference.jta-1.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\jta-1.1.jar
 file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Program Files\\NetBeans 7.3\\ide\\modules\\ext\\mysql-connector-java-5.1.18-bin.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\mysql-connector-java-5.1.6-bin.jar
+file.reference.oauth-client-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-client-1.18.jar
+file.reference.oauth-server-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-server-1.18.jar
+file.reference.oauth-signature-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-signature-1.18.jar
+file.reference.slf4j-api-1.5.8.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\slf4j-api-1.5.8.jar
+file.reference.slf4j-nop-1.5.6.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\slf4j-nop-1.5.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
 j2ee.platform=1.6-web
-j2ee.platform.classpath=${j2ee.server.home}/modules/javax.security.auth.message.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/endorsed/javax.annotation.jar:${j2ee.server.home}/modules/javax.el-api.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.jms.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/jersey-core.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.transaction.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/javax.management.j2ee.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar:${j2ee.server.home}/modules/javax.security.jacc.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar:${j2ee.server.home}/modules/javax.enterprise.deploy.jar:${j2ee.server.home}/modules/javax.resource.jar
+j2ee.platform.classpath=${j2ee.server.home}/modules/endorsed/javax.annotation-api.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/bean-validator.jar:${j2ee.server.home}/modules/javax.batch-api.jar:${j2ee.server.home}/modules/javax.ejb-api.jar:${j2ee.server.home}/modules/javax.el.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent-api.jar:${j2ee.server.home}/modules/javax.enterprise.concurrent.jar:${j2ee.server.home}/modules/javax.enterprise.deploy-api.jar:${j2ee.server.home}/modules/javax.faces.jar:${j2ee.server.home}/modules/javax.inject.jar:${j2ee.server.home}/modules/javax.interceptor-api.jar:${j2ee.server.home}/modules/javax.jms-api.jar:${j2ee.server.home}/modules/javax.json.jar:${j2ee.server.home}/modules/javax.mail.jar:${j2ee.server.home}/modules/javax.management.j2ee-api.jar:${j2ee.server.home}/modules/javax.persistence.jar:${j2ee.server.home}/modules/javax.resource-api.jar:${j2ee.server.home}/modules/javax.security.auth.message-api.jar:${j2ee.server.home}/modules/javax.security.jacc-api.jar:${j2ee.server.home}/modules/javax.servlet-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl-api.jar:${j2ee.server.home}/modules/javax.servlet.jsp.jstl.jar:${j2ee.server.home}/modules/javax.transaction-api.jar:${j2ee.server.home}/modules/javax.websocket-api.jar:${j2ee.server.home}/modules/javax.ws.rs-api.jar:${j2ee.server.home}/modules/javax.xml.registry-api.jar:${j2ee.server.home}/modules/javax.xml.rpc-api.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/weld-osgi-bundle.jar:${j2ee.server.middleware}/mq/lib/jaxm-api.jar
 j2ee.platform.embeddableejb.classpath=${j2ee.server.home}/lib/embedded/glassfish-embedded-static-shell.jar
 j2ee.platform.wscompile.classpath=${j2ee.server.home}/modules/webservices-osgi.jar
-j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
-j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar:${j2ee.server.home}/modules/javax.ejb.jar
+j2ee.platform.wsgen.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
+j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.jar:${j2ee.server.home}/modules/endorsed/webservices-api-osgi.jar:${j2ee.server.home}/modules/jaxb-osgi.jar:${j2ee.server.home}/modules/endorsed/jaxb-api-osgi.jar
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${libs.hibernate-support.classpath}:\
     ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.asm-3.1.jar}:\
+    ${file.reference.jackson-core-asl-1.9.2.jar}:\
+    ${file.reference.jackson-jaxrs-1.9.2.jar}:\
+    ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
+    ${file.reference.jackson-xc-1.9.2.jar}:\
+    ${file.reference.jersey-apache-client-1.18.jar}:\
+    ${file.reference.jersey-atom-abdera-1.18.jar}:\
+    ${file.reference.jersey-client-1.18.jar}:\
+    ${file.reference.jersey-core-1.18.jar}:\
+    ${file.reference.jersey-guice-1.18.jar}:\
+    ${file.reference.jersey-json-1.18.jar}:\
+    ${file.reference.jersey-multipart-1.18.jar}:\
+    ${file.reference.jersey-server-1.18.jar}:\
+    ${file.reference.jersey-servlet-1.18.jar}:\
+    ${file.reference.jersey-simple-server-1.18.jar}:\
+    ${file.reference.jersey-spring-1.18.jar}:\
+    ${file.reference.jettison-1.1.jar}:\
+    ${file.reference.jsr311-api-1.1.1.jar}:\
+    ${file.reference.oauth-client-1.18.jar}:\
+    ${file.reference.oauth-server-1.18.jar}:\
+    ${file.reference.oauth-signature-1.18.jar}:\
+    ${file.reference.antlr-2.7.6.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate3.jar}:\
+    ${file.reference.javassist-3.9.0.GA.jar}:\
+    ${file.reference.jta-1.1.jar}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
+    ${file.reference.slf4j-api-1.5.8.jar}:\
+    ${file.reference.slf4j-nop-1.5.6.jar}:\
+    ${file.reference.gson-2.2.4-javadoc.jar}:\
+    ${file.reference.gson-2.2.4-sources.jar}:\
+    ${file.reference.gson-2.2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
