--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -113,7 +113,8 @@ javac.classpath=\
     ${file.reference.slf4j-nop-1.5.6.jar}:\
     ${file.reference.gson-2.2.4-javadoc.jar}:\
     ${file.reference.gson-2.2.4-sources.jar}:\
-    ${file.reference.gson-2.2.4.jar}
+    ${file.reference.gson-2.2.4.jar}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
