--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,42 +27,32 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.antlr-2.7.6.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\antlr-2.7.6.jar
-file.reference.asm-3.1.jar=E:\\iti study\\web service\\jars for server\\asm-3.1.jar
-file.reference.commons-collections-3.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\commons-collections-3.1.jar
-file.reference.commons-logging-1.1.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\commons-logging-1.1.1.jar
-file.reference.dom4j-1.6.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\dom4j-1.6.1.jar
-file.reference.gson-2.2.4-javadoc.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4-javadoc.jar
-file.reference.gson-2.2.4-sources.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4-sources.jar
-file.reference.gson-2.2.4.jar=E:\\iti study\\XML\\xmlpart2\\JAPI for XML\\Jars\\google-gson-2.2.4\\gson-2.2.4.jar
-file.reference.hibernate3.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\hibernate3.jar
-file.reference.jackson-core-asl-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-core-asl-1.9.2.jar
-file.reference.jackson-jaxrs-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-jaxrs-1.9.2.jar
-file.reference.jackson-mapper-asl-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-mapper-asl-1.9.2.jar
-file.reference.jackson-xc-1.9.2.jar=E:\\iti study\\web service\\jars for server\\jackson-xc-1.9.2.jar
-file.reference.javassist-3.9.0.GA.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\javassist-3.9.0.GA.jar
-file.reference.jersey-apache-client-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-apache-client-1.18.jar
-file.reference.jersey-atom-abdera-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-atom-abdera-1.18.jar
-file.reference.jersey-client-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-client-1.18.jar
-file.reference.jersey-core-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-core-1.18.jar
-file.reference.jersey-guice-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-guice-1.18.jar
-file.reference.jersey-json-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-json-1.18.jar
-file.reference.jersey-multipart-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-multipart-1.18.jar
-file.reference.jersey-server-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-server-1.18.jar
-file.reference.jersey-servlet-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-servlet-1.18.jar
-file.reference.jersey-simple-server-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-simple-server-1.18.jar
-file.reference.jersey-spring-1.18.jar=E:\\iti study\\web service\\jars for server\\jersey-spring-1.18.jar
-file.reference.jettison-1.1.jar=E:\\iti study\\web service\\jars for server\\jettison-1.1.jar
-file.reference.json-simple-1.1.1.jar=E:\\a7eeeh\\json-simple-1.1.1.jar
-file.reference.jsr311-api-1.1.1.jar=E:\\iti study\\web service\\jars for server\\jsr311-api-1.1.1.jar
-file.reference.jta-1.1.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\jta-1.1.jar
-file.reference.mysql-connector-java-5.1.18-bin.jar=C:\\Program Files\\NetBeans 7.3\\ide\\modules\\ext\\mysql-connector-java-5.1.18-bin.jar
-file.reference.mysql-connector-java-5.1.6-bin.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\mysql-connector-java-5.1.6-bin.jar
-file.reference.oauth-client-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-client-1.18.jar
-file.reference.oauth-server-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-server-1.18.jar
-file.reference.oauth-signature-1.18.jar=E:\\iti study\\web service\\jars for server\\oauth-signature-1.18.jar
-file.reference.slf4j-api-1.5.8.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\slf4j-api-1.5.8.jar
-file.reference.slf4j-nop-1.5.6.jar=E:\\iti study\\hibernate\\Hibernate Day 1\\Required\\slf4j-nop-1.5.6.jar
+file.reference.antlr-2.7.6.jar=web/WEB-INF/lib/antlr-2.7.6.jar
+file.reference.asm-3.1.jar=web/WEB-INF/lib/asm-3.1.jar
+file.reference.commons-collections-3.1.jar=web/WEB-INF/lib/commons-collections-3.1.jar
+file.reference.commons-logging-1.1.1.jar=web/WEB-INF/lib/commons-logging-1.1.1.jar
+file.reference.dom4j-1.6.1.jar=web/WEB-INF/lib/dom4j-1.6.1.jar
+file.reference.gson-2.2.4-javadoc.jar=web/WEB-INF/lib/gson-2.2.4-javadoc.jar
+file.reference.gson-2.2.4-sources.jar=web/WEB-INF/lib/gson-2.2.4-sources.jar
+file.reference.gson-2.2.4.jar=web/WEB-INF/lib/gson-2.2.4.jar
+file.reference.hibernate3.jar=web/WEB-INF/lib/hibernate3.jar
+file.reference.jackson-core-asl-1.9.2.jar=web/WEB-INF/lib/jackson-core-asl-1.9.2.jar
+file.reference.jackson-jaxrs-1.9.2.jar=web/WEB-INF/lib/jackson-jaxrs-1.9.2.jar
+file.reference.jackson-mapper-asl-1.9.2.jar=web/WEB-INF/lib/jackson-mapper-asl-1.9.2.jar
+file.reference.jackson-xc-1.9.2.jar=web/WEB-INF/lib/jackson-xc-1.9.2.jar
+file.reference.javassist-3.9.0.GA.jar=web/WEB-INF/lib/javassist-3.9.0.GA.jar
+file.reference.jersey-client-1.18.jar=web/WEB-INF/lib/jersey-client-1.18.jar
+file.reference.jersey-core-1.18.jar=web/WEB-INF/lib/jersey-core-1.18.jar
+file.reference.jersey-json-1.18.jar=web/WEB-INF/lib/jersey-json-1.18.jar
+file.reference.jersey-server-1.18.jar=web/WEB-INF/lib/jersey-server-1.18.jar
+file.reference.jersey-servlet-1.18.jar=web/WEB-INF/lib/jersey-servlet-1.18.jar
+file.reference.jettison-1.1.jar=web/WEB-INF/lib/jettison-1.1.jar
+file.reference.json-simple-1.1.1.jar=web/WEB-INF/lib/json-simple-1.1.1.jar
+file.reference.jsr311-api-1.1.1.jar=web/WEB-INF/lib/jsr311-api-1.1.1.jar
+file.reference.jta-1.1.jar=web/WEB-INF/lib/jta-1.1.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.6-bin.jar
+file.reference.slf4j-api-1.5.8.jar=web/WEB-INF/lib/slf4j-api-1.5.8.jar
+file.reference.slf4j-nop-1.5.6.jar=web/WEB-INF/lib/slf4j-nop-1.5.6.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -77,44 +67,33 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${libs.hibernate-support.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.18-bin.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.antlr-2.7.6.jar}:\
     ${file.reference.asm-3.1.jar}:\
+    ${file.reference.commons-collections-3.1.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.gson-2.2.4-javadoc.jar}:\
+    ${file.reference.gson-2.2.4-sources.jar}:\
+    ${file.reference.gson-2.2.4.jar}:\
+    ${file.reference.hibernate3.jar}:\
     ${file.reference.jackson-core-asl-1.9.2.jar}:\
     ${file.reference.jackson-jaxrs-1.9.2.jar}:\
     ${file.reference.jackson-mapper-asl-1.9.2.jar}:\
     ${file.reference.jackson-xc-1.9.2.jar}:\
-    ${file.reference.jersey-apache-client-1.18.jar}:\
-    ${file.reference.jersey-atom-abdera-1.18.jar}:\
+    ${file.reference.javassist-3.9.0.GA.jar}:\
     ${file.reference.jersey-client-1.18.jar}:\
     ${file.reference.jersey-core-1.18.jar}:\
-    ${file.reference.jersey-guice-1.18.jar}:\
     ${file.reference.jersey-json-1.18.jar}:\
-    ${file.reference.jersey-multipart-1.18.jar}:\
     ${file.reference.jersey-server-1.18.jar}:\
     ${file.reference.jersey-servlet-1.18.jar}:\
-    ${file.reference.jersey-simple-server-1.18.jar}:\
-    ${file.reference.jersey-spring-1.18.jar}:\
     ${file.reference.jettison-1.1.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsr311-api-1.1.1.jar}:\
-    ${file.reference.oauth-client-1.18.jar}:\
-    ${file.reference.oauth-server-1.18.jar}:\
-    ${file.reference.oauth-signature-1.18.jar}:\
-    ${file.reference.antlr-2.7.6.jar}:\
-    ${file.reference.commons-collections-3.1.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.hibernate3.jar}:\
-    ${file.reference.javassist-3.9.0.GA.jar}:\
     ${file.reference.jta-1.1.jar}:\
     ${file.reference.mysql-connector-java-5.1.6-bin.jar}:\
     ${file.reference.slf4j-api-1.5.8.jar}:\
-    ${file.reference.slf4j-nop-1.5.6.jar}:\
-    ${file.reference.gson-2.2.4-javadoc.jar}:\
-    ${file.reference.gson-2.2.4-sources.jar}:\
-    ${file.reference.gson-2.2.4.jar}:\
-    ${libs.hibernate4-support.classpath}
+    ${file.reference.slf4j-nop-1.5.6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
